# timeout-iterator

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: build.yml
src/: asynchronous.rs  error.rs  lib.rs  synchronous.rs
